fixed spacing for better mirror, added aboutMe

--- a/workoutbuilder/src/App.css
+++ b/workoutbuilder/src/App.css
@@ -284,7 +284,7 @@ button.MuiButtonBase-root.MuiButton-root.MuiButton-text {
 }
 
 .paddingBottomPlayList {
-  margin-top: 20px !important;
+  margin-top: 280px !important;
 }
 
 .background-videoMirror {
